improved authenticate swagger configuration
